v0.2.2
======

* html-report: Fix metadata tooltip formatting
* html-report: Report conflictive file when JsonParseException is raised

v0.2.1
======

* html-report: Fix bug parsing optional arguments